[gd_scene load_steps=11 format=3 uid="uid://c8mhb22bae1my"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/dashboard/Dashboard.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c51vyn54bk7q4" path="res://src/ui-components/calendar/Calendar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dq4dr3oe20mb8" path="res://src/ui-components/player-list/PlayerList.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://i4nnwgwck615" path="res://src/ui-components/formation/Formation.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dcv0qm4k1wi4q" path="res://src/ui-components/email/Email.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://c7bh7ukttbkvu" path="res://src/ui-components/table/Table.tscn" id="7"]
[ext_resource type="PackedScene" path="res://src/ui-components/transfers/player-offer/PlayerOffer.tscn" id="8"]
[ext_resource type="PackedScene" path="res://src/ui-components/transfers/contract-offer/ContractOffer.tscn" id="9"]
[ext_resource type="PackedScene" path="res://src/ui-components/tranining/Training.tscn" id="10"]

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ManagerName" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 38.0
offset_right = 197.0
offset_bottom = 75.0
text = "Hans Viustel"

[node name="Budget" type="Label" parent="."]
layout_mode = 0
offset_left = 644.0
offset_top = 44.0
offset_right = 755.0
offset_bottom = 81.0
text = "400.000 $"

[node name="TeamName" type="Label" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 43.0
offset_right = 517.0
offset_bottom = 80.0
text = "Barcellona"

[node name="Date" type="Label" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 43.0
offset_right = 895.0
offset_bottom = 80.0
text = "24/08/2002"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1033.0
offset_top = 141.0
offset_right = 1239.0
offset_bottom = 385.0

[node name="Formation" type="Button" parent="Buttons"]
layout_mode = 2
text = "FORMATION"

[node name="Training" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
text = "TRAINING"

[node name="Table" type="Button" parent="Buttons"]
layout_mode = 2
text = "TABLE"

[node name="Calendar" type="Button" parent="Buttons"]
layout_mode = 2
text = "CALENDAR"

[node name="Email" type="Button" parent="Buttons"]
layout_mode = 2
text = "EMAIL"

[node name="Panel" type="Panel" parent="Buttons/Email"]
layout_mode = 0

[node name="MailCounter" type="Label" parent="Buttons/Email/Panel"]
layout_mode = 0
offset_left = 161.0
offset_right = 189.0
offset_bottom = 37.0
text = "12"

[node name="SearchPlayer" type="Button" parent="Buttons"]
layout_mode = 2
text = "SEARCH_PLAYER"

[node name="Menu" type="Button" parent="Buttons"]
layout_mode = 2
text = "MENU"

[node name="Email" parent="." instance=ExtResource("6")]
layout_mode = 1
offset_left = 54.0
offset_top = 106.0
offset_right = -286.0
offset_bottom = -147.0

[node name="Table" parent="." instance=ExtResource("7")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 50.0
offset_top = 111.0
offset_right = 650.0
offset_bottom = 511.0
grow_horizontal = 1
grow_vertical = 1

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_left = 1088.0
offset_top = 651.0
offset_right = 1232.0
offset_bottom = 685.0
text = "CONTINUE"

[node name="Calendar" parent="." instance=ExtResource("3")]
visible = false
layout_mode = 1
offset_left = 66.0
offset_top = 102.0
offset_right = -371.0
offset_bottom = -99.0

[node name="PlayerOfferPopup" type="Popup" parent="."]

[node name="Panel" type="Panel" parent="PlayerOfferPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerOffer" parent="PlayerOfferPopup" instance=ExtResource("8")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="ContractPopup" type="Popup" parent="."]

[node name="ContractOffer" parent="ContractPopup" instance=ExtResource("9")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="TrainingPopup" type="Popup" parent="."]

[node name="Training" parent="TrainingPopup" instance=ExtResource("10")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="AllPlayerList" parent="." instance=ExtResource("4")]
visible = false
layout_mode = 1

[node name="Formation" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Buttons/Formation" to="." method="_on_Formation_pressed"]
[connection signal="pressed" from="Buttons/Training" to="." method="_on_Training_pressed"]
[connection signal="pressed" from="Buttons/Table" to="." method="_on_Table_pressed"]
[connection signal="pressed" from="Buttons/Calendar" to="." method="_on_Calendar_pressed"]
[connection signal="pressed" from="Buttons/Email" to="." method="_on_Email_pressed"]
[connection signal="pressed" from="Buttons/SearchPlayer" to="." method="_on_SearchPlayer_pressed"]
[connection signal="pressed" from="Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="offer_contract" from="Email" to="." method="_on_Email_offer_contract"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="cancel" from="ContractPopup/ContractOffer" to="." method="_on_ContractOffer_cancel"]
[connection signal="confirm" from="ContractPopup/ContractOffer" to="." method="_on_ContractOffer_confirm"]
[connection signal="select_player" from="AllPlayerList" to="." method="_on_AllPlayerList_select_player"]
